--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "name": "Harrier EV",
-  "short_name": "Harrier EV",
+  "short_name": "Harrier",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#2c3e50",
+  "theme_color": "#0d6efd",
   "icons": [
     {
       "src": "icon-192.png",
